--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "May 09, 2019" "ugrep 1.1.0" "User Commands"
+.TH UGREP "1" "May 11, 2019" "ugrep 1.1.0" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -80,24 +80,28 @@ Specify a PATTERN used during the search of the input: an input
 line is selected if it matches any of the specified patterns.
 This option is most useful when multiple \fB\-e\fR options are used to
 specify multiple patterns, when a pattern begins with a dash (`\fB\-'\fR),
-or when option \fB\-f\fR is used.
+or to specify a pattern after option \fB\-f\fR.
 .TP
 \fB\-\-exclude\fR=\fIGLOB\fR
-Skip files whose path name matches GLOB (using wildcard matching).
-A path name glob can use *, ?, and [...] as wildcards, and \\ to
-quote a wildcard or backslash character literally.  Note that
-\fB\-\-exclude\fR patterns take priority over \fB\-\-include\fR patterns.  This
-option may be repeated.
+Skip files whose name matches GLOB (using wildcard matching). A
+glob can use *, ?, and [...] as wildcards, and \\ to quote a
+wildcard or backslash character literally.  If GLOB contains /,
+full pathnames are matched.  Otherwise basenames are matched.  Note
+that \fB\-\-exclude\fR patterns take priority over \fB\-\-include\fR patterns.
+This option may be repeated.
 .TP
 \fB\-\-exclude\-dir\fR=\fIGLOB\fR
-Exclude directories whose path name matches GLOB from recursive
-searches.  Note that \fB\-\-exclude\-dir\fR patterns take priority over
-\fB\-\-include\-dir\fR patterns.  This option may be repeated.
+Exclude directories whose name matches GLOB from recursive
+searches.  If GLOB contains /, full pathnames are matched.
+Otherwise basenames are matched.  Note that \fB\-\-exclude\-dir\fR patterns
+take priority over \fB\-\-include\-dir\fR patterns.  This option may be
+repeated.
 .TP
 \fB\-\-exclude\-from\fR=\fIFILE\fR
-Read the globs from FILE and skip files whose path name matches one
-or more globs (using wildcard matching).  Comments starting with a
-`#' and empty lines in FILE are ignored.
+Read the globs from FILE and skip files and directories whose name
+matches one or more globs (as if specified by \fB\-\-exclude\fR and
+\fB\-\-exclude\-dir\fR).  Lines starting with a `#' and empty lines in FILE
+ignored. This option may be repeated.
 .TP
 \fB\-F\fR, \fB\-\-fixed\-strings\fR
 Interpret pattern as a set of fixed strings, separated by newlines,
@@ -140,21 +144,25 @@ case\-insensitive matching of ASCII characters in the input.
 By default, ugrep is case sensitive.
 .TP
 \fB\-\-include\fR=\fIGLOB\fR
-Search only files whose path name matches GLOB (using wildcard
-matching).  A path name glob can use *, ?, and [...] as wildcards,
-and \\ to quote a wildcard or backslash character literally.
-Note that \fB\-\-exclude\fR patterns take priority over \fB\-\-include\fR patterns.
-This option may be repeated.
+Search only files whose name matches GLOB (using wildcard
+matching).  A glob can use *, ?, and [...] as wildcards, and \\ to
+quote a wildcard or backslash character literally.  If GLOB
+contains /, file pathnames are matched.  Otherwise file basenames
+are matched.  Note that \fB\-\-exclude\fR patterns take priority over
+\fB\-\-include\fR patterns.  This option may be repeated.
 .TP
 \fB\-\-include\-dir\fR=\fIGLOB\fR
-Only directories whose path name matches GLOB are included in
-recursive searches.  Note that \fB\-\-exclude\-dir\fR patterns take
-priority over \fB\-\-include\-dir\fR patterns.  This option may be repeated.
+Only directories whose name matches GLOB are included in recursive
+searches.  If GLOB contains /, full pathnames are matched.
+Otherwise basenames are matched.  Note that \fB\-\-exclude\-dir\fR patterns
+take priority over \fB\-\-include\-dir\fR patterns.  This option may be
+repeated.
 .TP
 \fB\-\-include\-from\fR=\fIFILE\fR
-Read the globs from FILE and search only files whose path name
-matches one or more globs (using wildcard matching).  Comments
-starting with a `#' and empty lines in FILE are ignored.
+Read the globs from FILE and search only files and directories
+whose name matches one or more globs (as if specified by \fB\-\-include\fR
+and \fB\-\-include\-dir\fR).  Lines starting with a `#' and empty lines in
+FILE are ignored.  This option may be repeated.
 .TP
 \fB\-k\fR, \fB\-\-column\-number\fR
 The column number of a matched pattern is displayed in front of
@@ -254,14 +262,14 @@ extensions to search.  This option may be repeated.  The possible
 values of type can be (use \fB\-t\fR list to display a detailed list):
 `actionscript', `ada', `asm', `asp', `aspx', `autoconf', `automake',
 `awk', `basic', `batch', `bison', `c', `c++', `clojure',
-`csharp', `css', `csv', `dart', `delphi', `erlang', `fortran',
-`go', `groovy', `haskell', `html', `jade', `java', `javascript',
-`json', `jsp', `julia', `less', `lex', `lisp', `lua',
-`m4', `make', `matlab', `objc', `objcpp', `ocaml', `parrot',
-`pascal', `perl', `php', `prolog', `python', `R', `rst',
-`ruby', `rust', `scala', `scheme', `shell', `smalltalk', `sql',
-`swift', `tcl', `tex', `text', `tt', `verilog', `vhdl',
-`vim', `xml', `yacc', `yaml'
+`csharp', `css', `csv', `dart', `delphi', `elixir', `erlang',
+`fortran', `go', `groovy', `haskell', `html', `jade', `java',
+`javascript', `json', `jsp', `julia', `kotlin', `less', `lex',
+`lisp', `lua', `m4', `make', `matlab', `objc', `objcpp',
+`ocaml', `parrot', `pascal', `perl', `php', `prolog', `python',
+`R', `rst', `ruby', `rust', `scala', `scheme', `shell',
+`smalltalk', `sql', `swift', `tcl', `tex', `text', `tt',
+`typescript', `verilog', `vhdl', `vim', `xml', `yacc', `yaml'
 .TP
 \fB\-\-tabs\fR=\fINUM\fR
 Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
@@ -323,6 +331,66 @@ One or more lines were selected.
 No lines were selected.
 .IP >1
 An error occurred.
+.SH GLOBBING
+Globbing is used by options \fB--include\fR, \fB--include-dir\fR,
+\fB--include-from\fR, \fB--exclude\fR, \fB--exclude-dir\fR,
+\fB--exclude-from\fR to match pathnames and basenames.  Globbing supports
+gitignore syntax and the corresponding matching rules.  When a glob contains a
+path separator `/', the pathname is matched.  Otherwise the basename of a file
+or directory is matched.  For example, \fB*.h\fR matches \fIfoo.h\fR and
+\fIbar/foo.h\fR.  \fBbar/*.h\fR matches \fIbar/foo.h\fR but not \fIfoo.h\fR and
+not \fIbar/bar/foo.h\fR.  Use a leading `/' to force \fB/*.h\fR to match
+\fIfoo.h\fR but not \fIbar/foo.h\fR.
+.PP
+Syntax:
+.IP \fB**/\fR
+Matches zero or more directories.
+.IP \fB/**\fR
+When at the end of a glob, matches everything after the /.
+.IP \fB*\fR
+Matches anything except a /.
+.IP \fB/\fR
+When used at the begin of a glob, matches if pathname has no /.
+.IP \fB?\fR
+Matches any character except a /.
+.IP \fB[a-z]\fR
+Matches one character in the selected range of characters.
+.IP \fB[^a-z]\fR
+Matches one character not in the selected range of characters.
+.IP \fB[!a-z]\fR
+Matches one character not in the selected range of characters.
+.IP \fB\\\\?\fR
+Matches a ? (or any character after the backslash).
+.PP
+Examples:
+.PP
+.IP \fB**/a\fR
+Matches a, x/a, x/y/a,       but not b, x/b.
+.IP \fBa/**/b\fR
+Matches a/b, a/x/b, a/x/y/b, but not x/a/b, a/b/x
+.IP \fBa/**\fR
+Matches a/x, a/y, a/x/y,     but not b/x
+.IP \fBa/*/b\fR
+Matches a/x/b, a/y/b,        but not a/x/y/b
+.IP \fB/a\fR
+Matches a,                   but not x/a
+.IP \fB/*\fR
+Matches a, b,                but not x/a, x/b
+.IP \fBa?b\fR
+Matches axb, ayb,            but not a, b, ab
+.IP \fBa[xy]b\fR
+Matches axb, ayb             but not a, b, azb
+.IP \fBa[a-z]b\fR
+Matches aab, abb, acb, azb,  but not a, b, a3b, aAb, aZb
+.IP \fBa[^xy]b\fR
+Matches aab, abb, acb, azb,  but not a, b, axb, ayb
+.IP \fBa[^a-z]b\fR
+Matches a3b, aAb, aZb        but not a, b, aab, abb, acb, azb
+.PP
+Lines in the \fB--exclude-from\fR and \fB--include-from\fR files are ignored
+when empty or start with a `#'.  The prefix `!' to a glob in such a file
+negates the pattern match, i.e. matching files are excluded except files
+matching the globs prefixed with `!' in the \fB--exclude-from\fR file.
 .SH ENVIRONMENT
 .IP \fBGREP_PATH\fR
 May be used to specify a file path to pattern files.  The file path is used by
