--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -257,8 +257,8 @@ Add a tab space to separate the file name, line number, column
 number, and byte offset with the matched line.
 .TP
 \fB\-t\fR TYPES, \fB\-\-file\-type\fR=\fITYPES\fR
-Search only files of TYPES, which is a comma\-separated list of file
-types.  Each file type is associated with a set of file name
+Search only files associated with TYPES, a comma\-separated list of
+file types.  Each file type corresponds to a set of file name
 extensions to search.  This option may be repeated.  The possible
 values of type can be (use \fB\-t\fR list to display a detailed list):
 `actionscript', `ada', `asm', `asp', `aspx', `autoconf', `automake',
