--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,10 +1,10 @@
-.TH UGREP "1" "May 13, 2019" "ugrep 1.1.2" "User Commands"
+.TH UGREP "1" "May 15, 2019" "ugrep 1.1.3" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
 .B ugrep
 [\fIOPTIONS\fR] [-A NUM] [-B NUM] [-C[NUM]] [\fIPATTERN\fR] [\fB-e\fR \fIPATTERN\fR]
-      [\fB-f\fR \fIFILE\fR] [\fB--file-type\fR=\fITYPES\fR] [\fB--file-format\fR=\fIENCODING\fR]
+      [\fB-f\fR \fIFILE\fR] [\fB--file-type\fR=\fITYPES\fR] [\fB--encoding\fR=\fIENCODING\fR]
       [\fB--colour\fR[=\fIWHEN\fR]|\fB--color\fR[=\fIWHEN\fR]] [\fB--label\fR[=\fILABEL\fR]] [\fIFILE\fR \fI...\fR]
 .SH DESCRIPTION
 The \fBugrep\fR utility searches any given input files, selecting lines that
@@ -19,7 +19,7 @@ specified ASCII/Unicode patterns.  When the input contains a UTF BOM indicating
 UTF-8, UTF-16, or UTF-32 input then \fBugrep\fR always normalizes the input to
 UTF-8.  When no UTF BOM is present, \fBugrep\fR assumes the input is ASCII,
 UTF-8, or raw binary.  To specify a different input file encoding, use option
-\fB--file-format\fR.
+\fB--encoding\fR.
 .PP
 The following options are available:
 .TP
@@ -28,6 +28,12 @@ Print NUM lines of trailing context after matching lines.  Places
 a \fB\-\-group\-separator\fR between contiguous groups of matches.  See also
 the \fB\-B\fR and \fB\-C\fR options.
 .TP
+\fB\-a\fR, \fB\-\-text\fR
+Process a binary file as if it were text.  This is equivalent to
+the \fB\-\-binary\-files\fR=\fItext\fR option.  This option might output binary
+garbage to the terminal, which can have problematic consequences if
+the terminal driver interprets some of it as commands.
+.TP
 \fB\-B\fR NUM, \fB\-\-before\-context\fR=\fINUM\fR
 Print NUM lines of leading context before matching lines.  Places
 a \fB\-\-group\-separator\fR between contiguous groups of matches.  See also
@@ -35,9 +41,19 @@ the \fB\-A\fR and \fB\-C\fR options.
 .TP
 \fB\-b\fR, \fB\-\-byte\-offset\fR
 The offset in bytes of a matched line is displayed in front of the
-respective matched line.  With option \fB\-g\fR displays the offset in
-bytes of each pattern matched.  Byte offsets represent the position
-of the match in the normalized input, i.e. binary, ASCII, UTF\-8.
+respective matched line.  When used with option \fB\-g\fR, displays the
+offset in bytes of each pattern matched.  Byte offsets are exact
+for binary, ASCII, and UTF\-8 input.  Otherwise, the byte offset in
+the UTF\-8\-converted input is displayed.
+.TP
+\fB\-\-binary\-files\fR=\fITYPE\fR
+Controls searching and reporting pattern matches in binary files.
+Options are `binary', `without\-match`, and `text`.  The default is
+`binary' to search binary files and to report a match without
+displaying the match.  `without\-match' ignores binary files.
+`text' treats all binary files as text, which might output binary
+garbage to the terminal, which can have problematic consequences
+if the terminal driver interprets some of it as commands.
 .TP
 \fB\-C\fR[NUM], \fB\-\-context\fR[=\fI\fR\fINUM\fR]
 Print NUM lines of leading and trailing context surrounding each
@@ -84,7 +100,7 @@ specify multiple patterns, when a pattern begins with a dash (`\fB\-'\fR),
 or to specify a pattern after option \fB\-f\fR.
 .TP
 \fB\-\-exclude\fR=\fIGLOB\fR
-Skip files whose name matches GLOB (using wildcard matching). A
+Skip files whose name matches GLOB (using wildcard matching).  A
 glob can use *, ?, and [...] as wildcards, and \\ to quote a
 wildcard or backslash character literally.  If GLOB contains /,
 full pathnames are matched.  Otherwise basenames are matched.  Note
@@ -107,7 +123,7 @@ ignored. This option may be repeated.
 \fB\-F\fR, \fB\-\-fixed\-strings\fR
 Interpret pattern as a set of fixed strings, separated by newlines,
 any of which is to be matched.  This forces ugrep to behave as
-fgrep but less efficiently.
+fgrep but less efficiently than fgrep.
 .TP
 \fB\-f\fR FILE, \fB\-\-file\fR=\fIFILE\fR
 Read one or more newline\-separated patterns from FILE.  Empty
@@ -121,9 +137,9 @@ Interpret pattern as a basic regular expression (i.e. force ugrep
 to behave as traditional grep).
 .TP
 \fB\-g\fR, \fB\-\-no\-group\fR
-Do not group pattern matches on the same line.  Display the matched
-line again for each additional pattern match, using `+' as the
-field separator for each additional line.
+Do not group multiple pattern matches on the same matched line.
+Output the matched line again for each additional pattern match,
+using `+' as the field separator for each additional line.
 .TP
 \fB\-\-group\-separator\fR=\fISEP\fR
 Use SEP as a group separator for context options \fB\-A\fR, \fB\-B\fR, and \fB\-C\fR. By
@@ -138,6 +154,10 @@ Never print filenames with output lines.
 .TP
 \fB\-\-help\fR
 Print a help message.
+.TP
+\fB\-I\fR
+Ignore binary files.  This option is equivalent to
+\fB\-\-binary\-files\fR=\fIwithout\-match\fR option.
 .TP
 \fB\-i\fR, \fB\-\-ignore\-case\fR
 Perform case insensitive matching. This option applies
@@ -166,9 +186,9 @@ and \fB\-\-include\-dir\fR).  Lines starting with a `#' and empty lines in
 FILE are ignored.  This option may be repeated.
 .TP
 \fB\-k\fR, \fB\-\-column\-number\fR
-The column number of a matched pattern is displayed in front of
-the respective matched line, starting at column 1.  Tabs are
-expanded when columns are counted.
+The column number of a matched pattern is displayed in front of the
+respective matched line, starting at column 1.  Tabs are expanded
+when columns are counted, see option \fB\-\-tabs\fR.
 .TP
 \fB\-L\fR, \fB\-\-files\-without\-match\fR
 Only the names of files not containing selected lines are written
@@ -278,9 +298,9 @@ Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
 NUM may be 1, 2, 4, or 8.
 .TP
 \fB\-U\fR, \fB\-\-binary\fR
-Forces PATTERN to match bytes instead of Unicode characters when
-searching binary files.  For example, `\\xa3' matches byte A3 (hex)
-instead of UTF\-8 byte sequence C2 A3 for Unicode character U+00A3.
+Forces PATTERN to match bytes, not Unicode characters, when
+searching files.  For example, `\\xa3' matches byte A3 (hex)
+instead of the UTF\-8 sequence C2 A3 for Unicode character U+00A3.
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 Display version information and exit.
@@ -288,6 +308,11 @@ Display version information and exit.
 \fB\-v\fR, \fB\-\-invert\-match\fR
 Selected lines are those not matching any of the specified
 patterns.
+.TP
+\fB\-W\fR SEP, \fB\-\-separator\fR=\fISEP\fR
+Use SEP as field separator between file name, line number, column
+number, byte offset, and the matched line.  The default is a colon
+(`:').
 .TP
 \fB\-w\fR, \fB\-\-word\-regexp\fR
 The pattern or \fB\-e\fR patterns are searched for as a word (as if
@@ -300,8 +325,8 @@ Spacing (blanks and tabs) in regular expressions are ignored.
 Only input lines selected against the entire pattern or \fB\-e\fR patterns
 are considered to be matching lines (as if surrounded by ^ and $).
 .TP
-\fB\-Y\fR ENCODING, \fB\-\-file\-format\fR=\fIENCODING\fR
-The input file format.  The possible values of ENCODING can be:
+\fB\-Y\fR ENCODING, \fB\-\-encoding\fR=\fIENCODING\fR
+The input file encoding.  The possible values of ENCODING can be:
 `binary', `ISO\-8859\-1', `ASCII', `EBCDIC', `UTF\-8', `UTF\-16',
 `UTF\-16BE', `UTF\-16LE', `UTF\-32', `UTF\-32BE', `UTF\-32LE', `CP437',
 `CP850', `CP1250', `CP1251', `CP1252', `CP1253', `CP1254',
@@ -313,10 +338,8 @@ Equivalent to \fB\-i\fR.  Obsoleted.
 \fB\-Z\fR, \fB\-\-null\fR
 Prints a zero\-byte after the file name.
 .TP
-\fB\-z\fR SEP, \fB\-\-separator\fR=\fISEP\fR
-Use SEP as field separator between file name, line number, column
-number, byte offset, and the matched line.  The default is a colon
-(`:').
+\fB\-z\fR, \fB\-\-decompress\fR
+Decompress files to search.  This feature is not yet available.
 .PP
 The regular expression pattern syntax is an extended form of the POSIX ERE
 syntax.  For an overview of the syntax see README.md or visit:
@@ -349,7 +372,7 @@ or directory is matched.  For example, \fB*.h\fR matches \fIfoo.h\fR and
 not \fIbar/bar/foo.h\fR.  Use a leading `/' to force \fB/*.h\fR to match
 \fIfoo.h\fR but not \fIbar/foo.h\fR.
 .PP
-Syntax:
+\fBGlob Syntax and Conventions\fR
 .IP \fB**/\fR
 Matches zero or more directories.
 .IP \fB/**\fR
@@ -369,7 +392,7 @@ Matches one character not in the selected range of characters.
 .IP \fB\\\\?\fR
 Matches a ? (or any character specified after the backslash).
 .PP
-Examples:
+\fBGlob Matching Examples\fR
 .IP \fB**/a\fR
 Matches a, x/a, x/y/a,       but not b, x/b.
 .IP \fBa/**/b\fR
