--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "July 14, 2019" "ugrep 1.2.0" "User Commands"
+.TH UGREP "1" "July 16, 2019" "ugrep 1.2.1" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -255,11 +255,11 @@ in the EXTENSIONS list.  This option may be repeated and may be
 combined with options \fB\-M\fR and \fB\-t\fR to expand the search.
 .TP
 \fB\-o\fR, \fB\-\-only\-matching\fR
-Prints only the matching part of the lines.  Allows a pattern
-match to span multiple lines.  Line numbers for multi\-line matches
-are displayed with option \fB\-n\fR, using `|' as the field separator for
-each additional line matched by the pattern.  Context options \fB\-A\fR,
-\-B, and \fB\-C\fR are disabled.
+Prints only the matching part of lines and allows pattern matches
+to span multiple lines.  Line numbers for multi\-line matches are
+displayed with option \fB\-n\fR, using `|' as the field separator for each
+additional line matched by the pattern.  Context options \fB\-A\fR, \fB\-B\fR,
+and \fB\-C\fR are disabled.
 .TP
 \fB\-P\fR, \fB\-\-perl\-regexp\fR
 Interpret PATTERN as a Perl regular expression.  This feature is
@@ -268,6 +268,11 @@ not yet available.
 \fB\-p\fR, \fB\-\-no\-dereference\fR
 If \fB\-R\fR or \fB\-r\fR is specified, no symbolic links are followed, even when
 they are on the command line.
+.TP
+\fB\-\-pager\fR[=\fI\fR\fICOMMAND\fR]
+When output is sent to the terminal, uses `COMMAND' to page through
+results.  The default COMMAND is `less \fB\-R\fR'.  This option makes
+\fB\-\-color\fR=\fIauto\fR behave as \fB\-\-color\fR=\fIalways\fR.
 .TP
 \fB\-Q\fR ENCODING, \fB\-\-encoding\fR=\fIENCODING\fR
 The input file encoding.  The possible values of ENCODING can be:
@@ -375,7 +380,7 @@ Equivalent to \fB\-i\fR.  Obsoleted.
 Prints a zero\-byte after the file name.
 .TP
 \fB\-z\fR, \fB\-\-decompress\fR
-Decompress files to search.  This feature is not yet available.
+Search zlib\-compressed (.gz) files.  This option disables \fB\-Q\fR.
 .PP
 The regular expression pattern syntax is an extended form of the POSIX ERE
 syntax.  For an overview of the syntax see README.md or visit:
@@ -551,18 +556,18 @@ $ ugrep -no -e 'FIXME' -e '(?^"(\\\\.|\\\\\\r?\\n|[^\\\\\\n"])*")' myfile
 To match the binary pattern `A3hhhhA3hh` (hex) in a binary file without
 Unicode pattern matching \fB-U\fR (which would otherwise match `\\xaf' as a
 Unicode character U+00A3 with UTF-8 byte sequence C2 A3) and display the
-results in hex with \fB-X\fR piped to `more -R':
+results in hex with \fB-X\fR using `less -R' as a pager:
 .IP
-$ ugrep --color=always -oUX '\\xa3[\\x00-\\xff]{2}\\xa3[\\x00-\\xff]' a.out | more -R
+$ ugrep --pager -UXo '\\xa3[\\x00-\\xff]{2}\\xa3[\\x00-\\xff]' a.out
 .PP
 To hex dump an entire file in color:
 .IP
-$ ugrep --color=always -oUX '.|\\n' a.out | less -R
+$ ugrep --color --pager -Xo '' a.out
 .PP
 To list all files containing a RPM signature, located in the `rpm` directory and
 recursively below:
 .IP
-$ ugrep -RlU '\\A\\xed\xab\\xee\\xdb' rpm
+$ ugrep -R -l -tRpm '' rpm/
 .PP
 To monitor the system log for bug reports:
 .IP
